# safe-trading-agent-template

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-sim.txt  requirements.txt
.claude/: settings.local.json
agent/: __init__.py  graph.py  state.py
agent/nodes/: __init__.py  async_oracle.py  execution.py  oracle.py  reasoning.py
docs/: algotrading-community-posts.md
examples/: demo_without_llm.py  run_agent.py
simulator/: __init__.py  app.py  model.py
tests/: conftest.py  test_async_oracle.py  test_graph_routing.py  test_oracle_verify.py  test_simulator_model.py
